--- a/Fiber Roofing.html
+++ b/Fiber Roofing.html
@@ -230,7 +230,7 @@
 
   
   <div class="breadcrumb">
-    <a href="home.html">Home</a> &gt; <strong>Fiber Roofing</strong>
+    <a href="index.html">Home</a> &gt; <strong>Fiber Roofing</strong>
   </div>
 
  
