--- a/tiles.html
+++ b/tiles.html
@@ -386,7 +386,7 @@
 
 
   <div class="breadcrumb">
-    <a href="home.html">Home</a> &gt; <strong>Tiles</strong>
+    <a href="index.html">Home</a> &gt; <strong>Tiles</strong>
   </div>
 
   <main class="page-container">
