--- a/bitumen.html
+++ b/bitumen.html
@@ -377,7 +377,7 @@
         <span>Home Roofing Shop <i class='bx bx-right-arrow-alt icon-big'></i></span>
       </div>
       <div class="right">
-        <span><i class="fa fa-map-marker-alt"></i> Store Finder</span>
+        <span><i class="fa fa-map-marker-alt"></i> We Deliver Everywhere</span>
       </div>
     </div>
   
@@ -448,7 +448,7 @@
         </ul>
   
   <div class="breadcrumb">
-    <a href="home.html">Home</a> &gt; <strong>Bitumen Sheets</strong>
+    <a href="index.html">Home</a> &gt; <strong>Bitumen Sheets</strong>
   </div>
 
   
