--- a/bricks.html
+++ b/bricks.html
@@ -548,7 +548,7 @@ main p {
 
   <body>
   <div class="breadcrumb">
-    <a href="home.html">Home</a> &gt; <strong>Bricks</strong>
+    <a href="index.html">Home</a> &gt; <strong>Bricks</strong>
   </div>
 
   <main>
