--- a/galvanized.html
+++ b/galvanized.html
@@ -507,7 +507,7 @@ section h2::after {
 
   <body>
     <div class="breadcrumb">
-      <a href="home.html">Home</a> &gt; <strong>Galvanized Systems</strong>
+      <a href="index.html">Home</a> &gt; <strong>Galvanized Systems</strong>
     </div>
     
     <main>
