--- a/louvers.html
+++ b/louvers.html
@@ -495,7 +495,7 @@
 
   <body>
     <div class="breadcrumb">
-      <a href="home.html">Home</a> &gt; <strong>Louvers</strong>
+      <a href="index.html">Home</a> &gt; <strong>Louvers</strong>
     </div>
   
     <main>
