--- a/plastic sheets.html
+++ b/plastic sheets.html
@@ -468,7 +468,7 @@
 
   <body>
   <div class="breadcrumb">
-    <a href="home.html">Home</a> &gt; <strong>Plastic Sheets</strong>
+    <a href="index.html">Home</a> &gt; <strong>Plastic Sheets</strong>
   </div>
 
 
