--- a/shingles.html
+++ b/shingles.html
@@ -379,7 +379,7 @@
 
 
   <div class="breadcrumb">
-    <a href="home.html">Home</a> &gt; <strong>Shingles</strong>
+    <a href="index.html">Home</a> &gt; <strong>Shingles</strong>
   </div>
 
   <main class="page-container">
