--- a/waterproof-membranes.html
+++ b/waterproof-membranes.html
@@ -355,7 +355,7 @@
 
 
   <div class="breadcrumb">
-    <a href="home.html">Home</a> &gt; <strong>Waterproof Membranes</strong>
+    <a href="index.html">Home</a> &gt; <strong>Waterproof Membranes</strong>
   </div>
 
   
