--- a/waranty.html
+++ b/waranty.html
@@ -469,7 +469,7 @@
 
 
   <div class="breadcrumb">
-    <a href="home.html">Home</a> > Warranty
+    <a href="index.html">Home</a> > Warranty
   </div>
 
   
